test/errors/error4.sp
%n_1>n_2.
sorts
#s=4..3.  
predicates
rules
